--- a/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
@@ -62,28 +62,14 @@
                             <h:panelGrid columns="1" style="width: 95%">
                                 <h:panelGrid columns="4" style="width: 100%">
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                                    <p:selectOneMenu id="somCanal" style="width: 90%" value="#{outletCrearBean.canalSeleccionado}" converter="channelConverter"
-                                                     >
-                                        <f:selectItems value="#{outletCrearBean.listaCanales}" var="can" itemLabel="#{can.nombre}"/>
-                                        <p:ajax process="@this" update="formOutlet:pgSegment" listener="#{outletCrearBean.listenerChannel()}"/>
-                                    </p:selectOneMenu>
+                                    <p:inputText id="itChannel" readonly="true" value="#{outletCrearBean.channelLabel}"/>
                                     <h:outputLabel value="#{msg.sub_subcanal}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                                    <p:selectOneMenu id="somSubCanal" style="width: 90%" value="#{outletCrearBean.subCanalSeleccionado}" converter="subChannelConverter"
-                                                     >
-                                        <f:selectItems value="#{outletCrearBean.canalSeleccionado.subChannelList}" var="subcan" itemLabel="#{subcan.nombre}"/>
-                                        <p:ajax process="@this" update="formOutlet:pgSegment" listener="#{outletCrearBean.listenerSubChannel()}"/>
-                                    </p:selectOneMenu>
-
+                                    <p:inputText id="itSubChannel" readonly="true" value="#{outletCrearBean.subChannelLabel}"/>
                                     <h:outputLabel value="#{msg.seg_segmento}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                                    <p:selectOneMenu id="somSegmento" style="width: 90%" value="#{outletCrearBean.segmentoSeleccionado}" converter="segmentoConverter"
-                                                     >
-                                        <f:selectItems value="#{outletCrearBean.subCanalSeleccionado.segmentoList}" var="seg" itemLabel="#{seg.nombre}"/>
-                                        <p:ajax process="@this" update="formOutlet:pgSegment" listener="#{outletCrearBean.listenerSegment()}"/>
-                                    </p:selectOneMenu>
+                                    <p:inputText id="itSegment" readonly="true" value="#{outletCrearBean.segmentLabel}"/>
                                     <h:outputLabel value="#{msg.sub_seg_subsegmento}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                                    <p:selectOneMenu id="somSubSegmento" style="width: 90%" value="#{outletCrearBean.subSegmentoSeleccionado}" converter="subSegmentoConverter"
-                                                     >
-                                        <f:selectItems value="#{outletCrearBean.segmentoSeleccionado.subSegmentoList}" var="subseg" itemLabel="#{subseg.nomnbre}"/>
+                                    <p:selectOneMenu id="somSubSegmento" style="width: 90%" value="#{outletCrearBean.subSegmentoSeleccionado}" converter="subSegmentoConverter">
+                                        <f:selectItems value="#{outletCrearBean.listSubSegment}" var="subseg" itemLabel="#{subseg.nomnbre}"/>
                                         <p:ajax process="@this" update="formOutlet:pgSegment" listener="#{outletCrearBean.listenerSubSegment()}"/>
                                     </p:selectOneMenu>
 
